<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RecipeApp</string>
    <string name="GenderLabelStr">Gender</string>
    <string name="WeightLabelStr">Weight</string>
    <string name="RestrictionLabelStr">Restriction</string>
    <string name="numInputLabelStr">Enter a number</string>
    <string name="lbsInputLabelStr">Enter a number (lbs)</string>
    <string name="maleCheckStr">Male</string>
    <string name="femaleCheckStr">Female</string>
    <string name="transgenderCheckStr">Transgender</string>
    <string name="nonbinaryCheckStr">Non-binary/non-conforming</string>
    <string name="noresponseCheckStr">Prefer not to respond</string>
    <string name="title_activity_userinterfacemain">TEST</string>
    <string name="helloworld">Hello World!</string>
    <string name="start">Click to start</string>
    <string name="searchforrecipes">Search recipes</string>
    <string name="recipetitle">Recipe Name</string>
    <string name="recipedescription">Description</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="todo">TODO</string>
    <string name="surveyHeaderStr">Survey</string>
    <string name="birthdayLabelStr">Birthday</string>
    <string name="UserName">Name</string>
    <string name="enterNameHint">Enter your name</string>
    <string name="EnterNameHint">Enter your name</string>
    <string name="nextButton">Next</string>
    <string name="other_diet">Other diet</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="diets">Diets</string>
    <string name="other_allergy">Other allergy</string>
    <string name="eggs">Eggs</string>
    <string name="wheat">Wheat</string>
    <string name="soy">Soy</string>
    <string name="fish">Fish</string>
    <string name="lactose_intolerant">Lactose intolerant</string>
    <string name="gluten">Gluten</string>
    <string name="nuts">Nuts</string>
    <string name="allergies">Allergies</string>
    <string name="food_preferences">Food Preferences</string>
    <string name="app_label">RecipeApp</string>
    <string name="search_hint">Enter a recipe (str)</string>

    <string-array name="recipenamesexample">
        <item>recipe!</item>
        <item>recipe12</item>
        <item>recipe13</item>
        <item>recipe14</item>
        <item>recipe156</item>
        <item>recipe178</item>
        <item>recipe19</item>
        <item>recipe10</item>
        <item>recipe!!</item>
    </string-array>

    <string name="create_profile">Press to create a new profile</string>
    <string name="person_name">Name of Person</string>
    <string name="birthdayProfileLabel">Birthday of User</string>
    <string name="lactose">Lactose Intolerant</string>
    <string name="select_your_allergies">Select Your Allergies</string>
    <string name="profile_header">Profiles</string>
    <string name="seasame">Seasame</string>
    <string name="sesame">Sesame</string>
    <string name="action_1">Delete profile</string>
    <string name="content_description_media">Profile Picture</string>

    <string-array name="exampleUsers">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
    </string-array>

</resources>