<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Survey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/strHeaderMainSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/food_preferences"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/strHeaderMinorGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/allergies"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"

            tools:ignore="UsingOnClickInXml">

            <RadioButton
                android:id="@+id/allergy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/nuts" />

            <RadioButton
                android:id="@+id/allergy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/gluten" />

            <RadioButton
                android:id="@+id/allergy3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/lactose_intolerant" />

            <RadioButton
                android:id="@+id/allergy4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"

                android:text="@string/fish" />
        </RadioGroup>

        <RadioButton
            android:id="@+id/allergy5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/soy" />

        <RadioButton
            android:id="@+id/allergy6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/wheat" />

        <RadioButton
            android:id="@+id/allergy7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/eggs" />


        <EditText
            android:id="@+id/otherAllergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/other_allergy"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/allergiesgeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/diets"
            android:textSize="24sp" />


        <RadioButton
            android:id="@+id/diet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/vegan" />

        <RadioButton
            android:id="@+id/diet2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian" />


        <RadioButton
            android:id="@+id/diet3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/pescatarian" />


        <EditText
            android:id="@+id/otherDiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/other_diet"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="RecipeOptions"
            android:text="@string/nextButton"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

