<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/informationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/userInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userInfoHeaderStr"
            android:textSize="34sp" />

        <CalendarView
            android:id="@+id/calendarView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GenderLabelStr"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/maleButtonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maleCheckStr" />

            <RadioButton
                android:id="@+id/femaleButtonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femaleCheckStr" />

            <RadioButton
                android:id="@+id/transgenderButtonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transgenderCheckStr" />

            <RadioButton
                android:id="@+id/nonbinaryButtonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nonbinaryCheckStr" />

            <RadioButton
                android:id="@+id/nonresponseButtonLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noresponseCheckStr" />
        </RadioGroup>

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WeightLabelStr"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/weightNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/lbsInputLabelStr"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>